# screaming-frog-mcp-pro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: derby-fixes.md
src/screaming_frog_mcp_pro/: __init__.py  server.py
